# poem-rs-test

./: Cargo.toml  compose.yml
migrations/2025-10-03-211652_create_user/: down.sql  up.sql
migrations/2025-10-03-212052_create_user_indexes/: down.sql  up.sql
src/: app.rs  logging.rs  main.rs  openapi_tags.rs  schema.rs
src/api/: healthcheck.rs  mod.rs  users.rs
src/db/: pool.rs
src/models/: user.rs
