[package]
name = "diesel_test"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
chrono = "0.4.42"
diesel = { version = "2.2.0", features = [
    "postgres",
    "uuid",
    "chrono",
    "r2d2",
] }
dotenvy = "0.15"
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v7"] }
